--- a/index.html
+++ b/index.html
@@ -482,8 +482,8 @@
 
    			<h5>Where to find me</h5>
 
-   			<p>semarang,indonesia <br>
-      since,2022
+   			<p>Semarang, Indonesia <br>
+      since 2022
             </p>
 
    		</div>
