--- a/index.html
+++ b/index.html
@@ -529,11 +529,10 @@
      	<div class="row">
 
      		<div class="col-six tab-full pull-right social">
-
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+			      <li><a href="#about"><i class="fa fa-facebook"></i></a></li>
+			      <li><a href="#about"><i class="fa fa-twitter"></i></a></li>
+			      <li><a href="#about"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
